# macro-field-utils

./: .gitignore  Cargo.toml  README.md
src/: fields.rs  lib.rs  variants.rs
