[package]
name = "macro-field-utils"
description = "Utilities to work with darling fields"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lasantosr/macro-field-utils"
keywords = ["procedural", "macro", "fields", "helpers", "utils"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = [".vscode/*", ".clippy.toml", ".rustfmt.toml", ".taplo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling     = "0.20"
proc-macro2 = "1"
quote       = "1"
syn         = "2"
